--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing="8">
     <tr>
-      <td><img src="images/donaldtree.png" alt="Donald profile picture" height="250",width ="250"></td>
+      <td><img src="Images/donaldtree.png" alt="Donald profile picture" height="250",width ="250"></td>
       <td><h1>Donald Tabor</h1>
       <p><em>Traveler of the World</em></p>
       <p>I am just a man that loves to experience the world and the people within it. I hold expereinces above anything else and the insight that comes from them. I love plants, the color blue, and <em>most</em> things that give me high adrenaline.</p></td>
